--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ header {
 #hero-image {
   height: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url(./assets/img/pexels-rfstudio-3059747.jpg);
+    url(/ci-project-1/assets/css/assets/img/pexels-rfstudio-3059747.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
