--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ nav a:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-height: 1200px;
+  /* max-height: 1200px;*/
   max-width: 1200px;
 }
 
@@ -123,7 +123,8 @@ nav a:hover {
   border-radius: 5px;
   min-width: 300px;
   max-width: 400px;
-  min-height: 300px;
+  height: 500px;
+  min-height: 500px;
   text-align: center;
   padding: 10px;
   margin: 20px;
@@ -140,6 +141,10 @@ nav a:hover {
   padding: 10px;
 }
 
+.course-card__desc {
+  min-height: 200px;
+}
+
 .course-card__image img {
   height: 100px;
 }
@@ -153,7 +158,7 @@ nav a:hover {
 }
 
 .course-card__link {
-  margin-top: 40px;
+  margin-top: 50px;
   margin-bottom: 20px;
 }
 
@@ -310,6 +315,7 @@ nav a:hover {
   box-shadow: 2px 2px 10px black;
   background-color: #fff;
   border-radius: 5px;
+  max-width: 1200px;
 }
 
 input[type="text"],
