--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ header {
   width: 100%;
   z-index: 1;
   background-color: rgba(255, 255, 255);
+  min-width: 640px;
 }
 
 .hero {
@@ -113,7 +114,6 @@ nav a:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* max-height: 1200px;*/
   max-width: 1200px;
 }
 
@@ -375,13 +375,6 @@ footer:before {
   vertical-align: middle;
   height: 100%;
 }
-
-/*  footer i {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 200%;
-  margin: 0 20px;
-} */
 
 .social-left {
   float: left;
