--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ nav a:hover {
   height: 100%;
   opacity: 0.5;
   background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
-    url(/assets/img/pexels-pixabay-270360.jpg);
+    url(../img/pexels-pixabay-270360.jpg);
   background-repeat: no-repeat;
   background-position: 50% 0;
   background-size: cover;
